--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "serve-json": "json-server --watch db.json"
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "json-server": "^0.17.3",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
@@ -19,7 +20,7 @@
     "react-router-dom": "^6.11.0",
     "sort-by": "^1.2.0",
     "styled-components": "^5.3.10",
-    "zustand": "^4.3.7"
+    "zustand": "^4.3.8"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
